# PyFstat

./: .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yml  .zenodo.json  CHANGELOG.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  LICENSE  MANIFEST.in  README.md  aux_tools.py  codecov.yml  codemeta.json  integration.yml  pyfstat.py  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py  test.txt  tests.py  versioneer.py
.binder/: environment.yml  postBuild
Paper/: AllSky_run_setup.tex  Makefile  Todo.txt  allsky_setup_run_setup.tex  bibliography.bib  definitions.tex  directed_setup_run_setup.tex  follow_up_run_setup.tex  git-tag.sh  macros.tex  paper_cw_mcmc.tex  weak_signal_follow_up_run_setup.tex
conda/: README.md  pyfstat.yml
docs/: Makefile  file_formats_used_by_pyfstat.md  follow_up.md  fully_coherent_search.md  fully_coherent_search_on_glitching_data.md  fully_coherent_search_using_MCMC.md  fully_coherent_search_using_MCMC_on_glitching_data.md  make_fake_data.md  requirements.txt  semi_coherent_glitch_search_using_MCMC_on_glitching_data.md  semi_coherent_glitch_search_with_two_glitches_using_MCMC_on_glitching_data.md  tuning_parameters.md
etc/: pyfstat-dev.yml  pyfstat.yml
examples/: Makefile  README.rst  computing_the_Bayes_factor.py  follow_up.py  fully_coherent_search.py  fully_coherent_search_on_glitching_data.py  fully_coherent_search_using_MCMC.py  fully_coherent_search_using_MCMC_on_glitching_data.py  glitch_robust_search.py  grid_glitch_search.py  make_fake_data.py  run_all_examples.py  (+11 more)
(+229 files in other folders)
