[metadata]
license_file = LICENSE

[flake8]
exclude = .git,docs,build,dist,tests,*__init__.py,versioneer.py,pyfstat/tcw_fstat_map_funcs.py
max-line-length = 80
select = C,E,F,W,B,B950
ignore = E501,W503,E203

[isort]
profile = black

[versioneer]
VCS = git
style = pep440
versionfile_source = pyfstat/_version.py
versionfile_build = pyfstat/_version.py
tag_prefix =
